2006-02-18  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (TemplateInstallLib.install): win32 install fix
	Fixes bug 2446

=== 1.9.6 ===
2006-02-17  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 1.9.6

	* kiwi/ui/widgets/entry.py:
	(Entry._set_mask_for_data_type, Entry.prop_set_data_type): 
	For datetime objects, set a default mask
	(Entry._insert_mask): Split into two
	(Entry.read): If the input is just the empty mask
	return an empty string. 

	* tests/test_Entry.py:
	Add paste/cut support. Refactor cleanup.
	Add a couple of basic tests.

2006-02-16  Johan Dahlin  <jdahlin@async.com.br>

	* examples/validation/personalinformation.py:
	* kiwi/ui/widgets/entry.py:
	Add basic mask support to entry, still needs a few
	improvements. Also add a simple example.

2006-02-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/utils.py:
	* tests/test_gazpacholoader.py:
	* tests/test_utils.py:

	2.6 compatibility added

2006-02-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/utils.py (PropertyMeta._update_bases): Make sure subclassing 
	of a combobox works

	* tests/test_utils.py (Subclassing.testCombo): Add a test for this

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/comboboxentry.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/combomixin.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/list.py:
	* tools/glade_conversor.py:

	Refactor combos, beginning of gazpacho/proxy support for comboentry.

2006-02-14  Johan Dahlin  <jdahlin@async.com.br>

	* examples/framework/news/news2.py:
	* examples/framework/news/news3.py:
	* examples/framework/news/news4.py:
	* examples/list/editable.py:
	* examples/list/kitchensink.py:
	* examples/list/radio.py:
	* examples/list/searchbar.py:
	* examples/list/simple.py:
	* examples/list/sortable.py:
	* examples/list/stockicon.py:
	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py: