@@ -1,3 +1,9 @@
+2006-02-21  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: Add Column.editable_attribute which
+	is a row (object) specific way of saying if an attribute
+	is editable or not.
+
 2006-02-18  Patrick K O'Brien <pobrien@orbtech.com>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
